[tool.poetry]
name = "rf-classifierapp"
version = "0.1.0"
description = ""
authors = ["Fikry C Farenza <vickyfarenza@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.38.0"
scikit-learn = "^1.5.1"
matplotlib = "^3.9.2"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
